add some styles

--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A11y Study Group Accessible Websites Project</title>
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
 
     <nav>
         <ul>
-            <li>Home</li>
-            <li>About This Project</li>
-            <li>Contact</li>
+            <li><a class="nav--link" href="/">About This Project</a></li>
+            <li><a class="nav--link" href="/index/about.html">About This Project</a></li>
+            <li><a class="nav--link" href="/index/contact.html">Contact</a></li>
+
         </ul>
     </nav>
     <main>
@@ -19,17 +21,17 @@
 
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque nobis nostrum minima nam expedita in? Itaque voluptates hic nostrum quia saepe, cum accusantium odit eveniet odio fuga, modi repellat nobis!</p>
 
-        ## Links to Site Themes
+        <h2>Links to Site Themes</h2>
 
-        <ul>
-            <li><a href="/dark-theme/index.html">Dark Theme</a></li>
-            <li><a href="/light-theme/index.html">Light Theme - Comming Soon!</a></li>
-            <li><a href="/high-contrast-light-theme/index.html">High Contrast Light Theme - Comming Soon!</a></li>
-            <li><a href="/high-contrast-dark-theme/index.html">High Contrast Dark Theme - Comming Soon!</a></li>
-            <li><a href="/muted-light-theme/index.html">Muted Light Theme - Comming Soon!</a></li>
-            <li><a href="/muted-dark-theme/index.html">Muted Dark Theme - Comming Soon!</a></li>
-            <li><a href="/comic-sans-light-theme/index.html">Comic Sans Light Theme - Comming Soon!</a></li>
-            <li><a href="/comic-sans-dark-theme/index.html">Comic Sans Dark Theme - Comming Soon!</a></li>
+        <ul class="nav-link-li">
+            <li><a class="nav--link" href="/dark-theme/index.html">Dark Theme</a></li>
+            <li><a class="nav--link" href="/light-theme/index.html">Light Theme - Comming Soon!</a></li>
+            <li><a class="nav--link" href="/high-contrast-light-theme/index.html">High Contrast Light Theme - Comming Soon!</a></li>
+            <li><a class="nav--link" href="/high-contrast-dark-theme/index.html">High Contrast Dark Theme - Comming Soon!</a></li>
+            <li><a class="nav--link" href="/muted-light-theme/index.html">Muted Light Theme - Comming Soon!</a></li>
+            <li><a class="nav--link" href="/muted-dark-theme/index.html">Muted Dark Theme - Comming Soon!</a></li>
+            <li><a class="nav--link" href="/comic-sans-light-theme/index.html">Comic Sans Light Theme - Comming Soon!</a></li>
+            <li><a class="nav--link" href="/comic-sans-dark-theme/index.html">Comic Sans Dark Theme - Comming Soon!</a></li>
         </ul>
     </main>
     
