--- a/index.html
+++ b/index.html
@@ -9,29 +9,46 @@
 <body>
 
     <nav>
-        <ul>
-            <li><a class="nav--link" href="/">About This Project</a></li>
-            <li><a class="nav--link" href="/index/about.html">About This Project</a></li>
-            <li><a class="nav--link" href="/index/contact.html">Contact</a></li>
+        <ul class="flex">
+            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="#main">Skip to Main Content</a></li>
+            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/">Home</a></li>
+            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/index/about.html">About This Project</a></li>
+            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/index/contact.html">Contact</a></li>
 
         </ul>
     </nav>
     <main>
-        <h1>Web Accessibity Study Group Accessible Websites Project</h1>
+        <a class="nav--link padding--x-4rem" href="#list-of-site-themes">Skip to links to themes of mirror sites</a>
+        <h1>A11y Study Group Accessible Websites Project</h1>
 
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque nobis nostrum minima nam expedita in? Itaque voluptates hic nostrum quia saepe, cum accusantium odit eveniet odio fuga, modi repellat nobis!</p>
+        <p>
+            This community open source project is a set of very accessible sub websites with minimal styling to support the Web Accessiblity Study Group. Each sub website has idential content with different styling. It's inspired by Dorlyn's comments during the opening live stream of our second term on Thursday, January 19, 2024. Doryln is a screenreader user with an awesomely adorable guide dog. See the <a href="(https://github.com/codingtherapist/webAccessibilityStudyGroup)"> GitHub Repo for the Web Accessibility Study Group</a>.
+        </p>
 
-        <h2>Links to Site Themes</h2>
+        <p>
+            Some members find using an well coded website more accessible than using GitHub to read study group information.
+
+The Web Accessibility Study Group started in August and September of 2023 by [Africa Kenya](https://github.com/codingtherapist). It's snowballed and the last time one of us checked we had people from 11 countries.
+
+Please go to [the main repo discussion forum](https://github.com/codingtherapist/webAccessibilityStudyGroup/discussions/5) to ask for more information about our group and to join. This repo is just for the community website project.
+        </p>
+
+
+
+       
+
+
+        <h2 id="list-of-site-themes">Links to Site Themes</h2>
 
         <ul class="nav-link-li">
             <li><a class="nav--link" href="/dark-theme/index.html">Dark Theme</a></li>
-            <li><a class="nav--link" href="/light-theme/index.html">Light Theme - Comming Soon!</a></li>
-            <li><a class="nav--link" href="/high-contrast-light-theme/index.html">High Contrast Light Theme - Comming Soon!</a></li>
-            <li><a class="nav--link" href="/high-contrast-dark-theme/index.html">High Contrast Dark Theme - Comming Soon!</a></li>
-            <li><a class="nav--link" href="/muted-light-theme/index.html">Muted Light Theme - Comming Soon!</a></li>
-            <li><a class="nav--link" href="/muted-dark-theme/index.html">Muted Dark Theme - Comming Soon!</a></li>
-            <li><a class="nav--link" href="/comic-sans-light-theme/index.html">Comic Sans Light Theme - Comming Soon!</a></li>
-            <li><a class="nav--link" href="/comic-sans-dark-theme/index.html">Comic Sans Dark Theme - Comming Soon!</a></li>
+            <li><a class="nav--link padding--y-2rem" href="/light-theme/index.html">Light Theme</a> - Comming Soon!</li>
+            <li><a class="nav--link" href="/high-contrast-light-theme/index.html">High Contrast Light Theme</a> - Comming Soon!</li>
+            <li><a class="nav--link" href="/high-contrast-dark-theme/index.html">High Contrast Dark Theme</a> - Comming Soon!</li>
+            <li><a class="nav--link" href="/muted-light-theme/index.html">Muted Light Theme</a> - Comming Soon!</li>
+            <li><a class="nav--link" href="/muted-dark-theme/index.html">Muted Dark Theme</a> - Comming Soon!</li>
+            <li><a class="nav--link" href="/comic-sans-light-theme/index.html">Comic Sans Light Theme</a> - Comming Soon!</li>
+            <li><a class="nav--link" href="/comic-sans-dark-theme/index.html">Comic Sans Dark Theme</a> - Comming Soon!</li>
         </ul>
     </main>
     
