--- a/dark-theme/index.html
+++ b/dark-theme/index.html
@@ -24,11 +24,14 @@
     <main>
         <h1>Web Accessibility Study Group</h1>
 
-        <p><em>THIS SITE AND ALL THE MIRROR SITES ARE A WEB APP VERSION OF THE WEB ACCESSIBLITY STUDY GROUP'S <a href="https://github.com/codingtherapist/webAccessibilityStudyGroup">GIT HUB REPO</a></em>The GitHub repo is the "source of truth" and the most up to date information!</p>
+        <p><em>THIS SITE AND ALL THE MIRROR SITES ARE A WEB APP VERSION OF THE WEB ACCESSIBLITY STUDY GROUP'S <a href="https://github.com/codingtherapist/webAccessibilityStudyGroup">GIT HUB REPO</a></em></p>
+        <p>The GitHub repo is the "source of truth" and the most up to date information!</p>
 
         <p>Greetings and welcome to the Web Accessibility Study Group!</p>
-
-        Here is the <a href="https://www.youtube.com/watch?v=ZVQiqL0HqsI&t=812s">YouTube video</a> of the live info session going over all the information found in this site and the Web Accessibility Study Group's <a href="https://github.com/codingtherapist/webAccessibilityStudyGroup">GitHub repository.</a>
+        <p>
+            Here is the <a href="https://www.youtube.com/watch?v=ZVQiqL0HqsI&t=812s">YouTube video</a> of the live info session going over all the information found in this site and the Web Accessibility Study Group's <a href="https://github.com/codingtherapist/webAccessibilityStudyGroup">GitHub repository.</a>
+        </p>
+        
 
         <h2>Contents</h2>
 
