add draft is live message for links to light and dark theme on apex site

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ Please go to <a href="https://github.com/codingtherapist/webAccessibilityStudyGr
         <h2 id="list-of-site-themes">Links to Site Themes</h2>
 
         <ul class="nav-link-li">
-            <li><a class="nav--link" href="/dark-theme/index.html">Dark Theme</a></li>
-            <li><a class="nav--link padding--y-2rem" href="/light-theme/index.html">Light Theme</a> - Comming Soon!</li>
+            <li><a class="nav--link" href="/dark-theme/index.html">Dark Theme</a>- Draft is live</li>
+            <li><a class="nav--link padding--y-2rem" href="/light-theme/index.html">Light Theme</a> - Draft is live</li>
             <li><a class="nav--link" href="/high-contrast-light-theme/index.html">High Contrast Light Theme</a> - Comming Soon!</li>
             <li><a class="nav--link" href="/high-contrast-dark-theme/index.html">High Contrast Dark Theme</a> - Comming Soon!</li>
             <li><a class="nav--link" href="/muted-light-theme/index.html">Muted Light Theme</a> - Comming Soon!</li>
