fix paths to theme page files and css. light theme works

--- a/dark-theme/home-dark-theme.html
+++ b/dark-theme/home-dark-theme.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/styles-dark-theme.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&family=Lilita+One&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
     <nav>
         <ul class="flex">
             <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="#main">Skip to Main Content</a></li>
-            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/">Dark Theme Home</a></li>
+            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/home-dark-theme.html">Dark Theme Home</a></li>
             
             <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/study-plan.html">Study Plan</a></li>
             <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/index/contact.html">Contact</a></li>
