--- a/light-theme/light-theme-home.html
+++ b/light-theme/light-theme-home.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/styles.css">
+    <title>A11y Study Group Accessible Websites Project</title>
+    <link rel="stylesheet" href="/light-theme/styles-light-theme.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&family=Lilita+One&display=swap" rel="stylesheet">
@@ -15,8 +15,8 @@
             <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="#main">Skip to Main Content</a></li>
             <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/">Dark Theme Home</a></li>
             
-            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/study-plan.html">Study Plan</a></li>
-            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/index/contact.html">Contact</a></li>
+            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/light-theme/study-plan-light-theme.html">Study Plan</a></li>
+            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/light-theme/contact.html">Contact</a></li>
             <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="https://a11ystudygroup.com">Mirror Sites Home Page</a></li>
 
         </ul>
