--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- MAIN TOP LEVEL SITE -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,8 +17,8 @@
         <ul class="flex">
             <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="#main">Skip to Main Content</a></li>
             <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/">Home</a></li>
-            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/index/about.html">About This Project</a></li>
-            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/index/contact.html">Contact</a></li>
+            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/about.html">About This Project</a></li>
+            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/contact.html">Contact</a></li>
 
         </ul>
     </nav>
@@ -41,8 +43,8 @@ Please go to <a href="https://github.com/codingtherapist/webAccessibilityStudyGr
         <h2 id="list-of-site-themes">Links to Site Themes</h2>
 
         <ul class="nav-link-li">
-            <li><a class="nav--link" href="/dark-theme/index.html">Dark Theme</a>- Draft is live</li>
-            <li><a class="nav--link padding--y-2rem" href="/light-theme/index.html">Light Theme</a> - Draft is live</li>
+            <li><a class="nav--link" href="/dark-theme-home.html">Dark Theme</a>- Draft is live</li>
+            <li><a class="nav--link padding--y-2rem" href="/light-theme/light-theme-home.html">Light Theme</a> - Draft is live</li>
             <li><a class="nav--link" href="/high-contrast-light-theme/index.html">High Contrast Light Theme</a> - Comming Soon!</li>
             <li><a class="nav--link" href="/high-contrast-dark-theme/index.html">High Contrast Dark Theme</a> - Comming Soon!</li>
             <li><a class="nav--link" href="/muted-light-theme/index.html">Muted Light Theme</a> - Comming Soon!</li>
