sort out nav links for all dark and light theme pages

--- a/light-theme/study-plan-light-theme.html
+++ b/light-theme/study-plan-light-theme.html
@@ -1,3 +1,5 @@
+<!-- LIGHT THEME - README -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,11 +15,11 @@
 
     <nav>
         <ul class="flex">
-            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="#main">Skip to Main Content</a></li>
-            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/">Home</a></li>
-            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/index/about.html">About This Project</a></li>
-            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/index/contact.html">Contact</a></li>
-
+            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="#main">Skip to Main</a></li>
+            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/light-theme/home-light-theme.html">This Theme's Home</a></li>
+            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/light-theme/readme-light-theme.html">Readme</a></li>
+            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/light-theme/study-plan-light-theme.html">Study Plan</a></li>
+            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/">Dark Theme Home</a></li>
         </ul>
     </nav>
 
