--- a/dark-theme/readme-dark-theme.html
+++ b/dark-theme/readme-dark-theme.html
@@ -1,25 +1,27 @@
+<!-- LIGHT THEME - README -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A11y Study Group Accessible Websites Project</title>
-    <link rel="stylesheet" href="/light-theme/styles-light-theme.css">
+    <link rel="stylesheet" href="/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&family=Lilita+One&display=swap" rel="stylesheet">
 </head>
 <body>
+
     <nav>
         <ul class="flex">
-            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="#main">Skip to Main Content</a></li>
+            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="#main">Skip to Main</a></li>
             <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/">Dark Theme Home</a></li>
-            
-            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/light-theme/study-plan-light-theme.html">Study Plan</a></li>
-            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/light-theme/contact.html">Contact</a></li>
-            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="https://a11ystudygroup.com">Mirror Sites Home Page</a></li>
-
+            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/dark-theme/readme-dark-theme.html">Readme</a></li>
+            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/dark-theme/study-plan-dark-theme.html">Study Plan</a></li>
+            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/light-theme/home-light-theme.html">Light Theme Home</a></li>
         </ul>
+    </nav>
 
     <main>
         <h1>Web Accessibility Study Group</h1>
