--- a/dark-theme/study-plan-dark-theme.html
+++ b/dark-theme/study-plan-dark-theme.html
@@ -13,11 +13,11 @@
 
     <nav>
         <ul class="flex">
-            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="#main">Skip to Main Content</a></li>
-            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/">Home</a></li>
-            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/index/about.html">About This Project</a></li>
-            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/index/contact.html">Contact</a></li>
-
+            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="#main">Skip to Main</a></li>
+            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/">Dark Theme Home</a></li>
+            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/dark-theme/readme-dark-theme.html">Readme</a></li>
+            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/dark-theme/study-plan-dark-theme.html">Study Plan</a></li>
+            <li><a class="nav--link padding--x-1rem margin-bottom-2rem" href="/light-theme/home-light-theme.html">Light Theme Home</a></li>
         </ul>
     </nav>
 
