done dark + light theme study plan. Done coding this today

--- a/light-theme/readme-light-theme.html
+++ b/light-theme/readme-light-theme.html
@@ -21,18 +21,19 @@
     </nav>
 
     <main>
+        <hr></hr>
         <h1>Web Accessibility Study Group</h1>
 
-        <p><em>THIS SITE AND ALL THE MIRROR SITES ARE A WEB APP VERSION OF THE WEB ACCESSIBLITY STUDY GROUP'S <a href="https://github.com/codingtherapist/webAccessibilityStudyGroup">GIT HUB REPO</a></em></p>
-        <p>The GitHub repo is the "source of truth" and the most up to date information!</p>
-
-        <p>Greetings and welcome to the Web Accessibility Study Group!</p>
-        <p>
-            Here is the <a href="https://www.youtube.com/watch?v=ZVQiqL0HqsI&t=812s">YouTube video</a> of the live info session going over all the information found in this site and the Web Accessibility Study Group's <a href="https://github.com/codingtherapist/webAccessibilityStudyGroup">GitHub repository.</a>
-        </p>
+            <p><em>THIS SITE AND ALL THE MIRROR SITES ARE A WEB APP VERSION OF THE WEB ACCESSIBLITY STUDY GROUP'S <a href="https://github.com/codingtherapist/webAccessibilityStudyGroup">GIT HUB REPO</a></em></p>
+            <p>The GitHub repo is the "source of truth" and the most up to date information!</p>
+        <hr></hr>
+            <p>Greetings and welcome to the Web Accessibility Study Group!</p>
+            <p>
+                Here is the <a href="https://www.youtube.com/watch?v=ZVQiqL0HqsI&t=812s">YouTube video</a> of the live info session going over all the information found in this site and the Web Accessibility Study Group's <a href="https://github.com/codingtherapist/webAccessibilityStudyGroup">GitHub repository.</a>
+            </p>
         
-
         <h2>Contents</h2>
+        <p>Please note: As the main goal of this project is to make the study plan avaliable in an accessible format, this page is unfinished.</p>
 
         <ol>
             <li><a href="">1</a></li>
