--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </nav>
     <main>
         <a class="nav--link padding--x-4rem" href="#list-of-site-themes">Skip to links to themes of mirror sites</a>
+        <hr class="hr--under-nav">
         <h1>A11y Study Group Accessible Websites Project</h1>
 
         <p>
@@ -33,13 +34,11 @@
         <p>
             It's inspired by Dorlyn's comments during the opening live stream of our second term on Thursday, January 19, 2024. Doryln is a screenreader user with an awesomely adorable guide dog.
         </p>
-        <p>
-            
+        <p> The Web Accessibility Study Group started in August and September of 2023 by <a href="https://github.com/codingtherapist">Africa Kenya</a>. It's snowballed and the last time one of us checked we had people from 11 countries. Content on these mirror sites is from the <a href="(https://github.com/codingtherapist/webAccessibilityStudyGroup)">Study Group's GitHub repo</a>.
 
-The Web Accessibility Study Group started in August and September of 2023 by <a href="https://github.com/codingtherapist">Africa Kenya</a>. It's snowballed and the last time one of us checked we had people from 11 countries. Content on these mirror sites is from the <a href="(https://github.com/codingtherapist/webAccessibilityStudyGroup)">Study Group's GitHub repo</a>.
-
-Please go to <a href="https://github.com/codingtherapist/webAccessibilityStudyGroup/discussions/5">the main repo discussion forum</a>This repo is just for the community website project.
+Please visit <a href="https://github.com/codingtherapist/webAccessibilityStudyGroup/discussions/5">the main repo discussion forum.</a> This repo is just for the community website project.
         </p>
+        <hr>
 <section>
         <h2 id="list-of-site-themes">Links to Site Themes</h2>
 
