add missing hr on light theme home

--- a/light-theme/home-light-theme.html
+++ b/light-theme/home-light-theme.html
@@ -24,6 +24,7 @@
     </nav>
     <main>
         <a class="nav--link padding--x-4rem" href="#list-of-site-themes">Skip to links to themes of mirror sites</a>
+        <hr class="hr--under-nav">
         <h1>A11y Study Group Accessible Websites Project</h1>
 
         <p>
