change hr on light theme

--- a/light-theme/readme-light-theme.html
+++ b/light-theme/readme-light-theme.html
@@ -21,12 +21,12 @@
     </nav>
 
     <main>
-        <hr></hr>
+        <hr class="hr--under-nav">
         <h1>Web Accessibility Study Group</h1>
 
             <p><em>THIS SITE AND ALL THE MIRROR SITES ARE A WEB APP VERSION OF THE WEB ACCESSIBLITY STUDY GROUP'S <a href="https://github.com/codingtherapist/webAccessibilityStudyGroup">GIT HUB REPO</a></em></p>
             <p>The GitHub repo is the "source of truth" and the most up to date information!</p>
-        <hr></hr>
+        <hr>
             <p>Greetings and welcome to the Web Accessibility Study Group!</p>
             <p>
                 Here is the <a href="https://www.youtube.com/watch?v=ZVQiqL0HqsI&t=812s">YouTube video</a> of the live info session going over all the information found in this site and the Web Accessibility Study Group's <a href="https://github.com/codingtherapist/webAccessibilityStudyGroup">GitHub repository.</a>
